--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=bulaja-postgree
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.datasource.url=jdbc:postgresql://dpg-cp3dgfo21fec73b5fopg-a.oregon-postgres.render.com/bula_ja
-spring.datasource.username=admin
-spring.datasource.password=4caZxzzaS9IVwUJSD6PmkIIN3YuC4WnL
+spring.datasource.username=${DATABASE_USERNAME}
+spring.datasource.password=${DATABASE_PASSWORD}
+spring.datasource.url=${DATABASE_URL}
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
